Deploy workout tracker

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 MONGO_URI=mongodb+srv://Naeche05:J5o7oHI8uHHioj57@cluster0.6mfbsjz.mongodb.net/?appName=Cluster0
+
+GOOGLE_CLIENT_ID=3130862024-f170n3jkbdtg7kseh3o21im6lorq0rjc.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+CALLBACK_URL_GOOGLE=http://localhost:3000/auth/google/callback
+GITHUB_CLIENT_ID=Ov23lia2ePYrKuj7r2Hl
+GITHUB_CLIENT_SECRET=a55a3d83d313e0a8b2228dcf5e0344cf54728679
+CALLBACK_URL_GITHUB=http://localhost:3000/auth/github/callback
